[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oai_jhorowitz"
version = "0.0.1"
authors = [
  { name="Josh Horowitz", email="josh.uam.horowitz+pyoai@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jhorowitz/oai"
Issues = "https://github.com/jhorowitz/oai/issues"
